Add RHEL8 STIGID to accounts_password_minlen_login_defs

--- a/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_minlen_login_defs/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_minlen_login_defs/rule.yml
@@ -47,6 +47,7 @@ references:
     nist-csf: PR.AC-1,PR.AC-6,PR.AC-7
     srg: SRG-OS-000078-GPOS-00046
     stigid@ol8: OL08-00-020231
+    stigid@rhel8: RHEL-08-020231
 
 ocil_clause: 'it is not set to the required value'
 
