modify rule.yaml files to change the parameter name of file_groupownership template from filegid to gid_or_name

--- a/applications/openshift/master/file_groupowner_etcd_data_dir/rule.yml
+++ b/applications/openshift/master/file_groupowner_etcd_data_dir/rule.yml
@@ -41,4 +41,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /var/lib/etcd/member/
-        filegid: '0'
+        gid_or_name: '0'
