--- a/applications/openshift/master/file_groupowner_openvswitch/rule.yml
+++ b/applications/openshift/master/file_groupowner_openvswitch/rule.yml
@@ -30,4 +30,4 @@ template:
     vars:
         filepath: /etc/openvswitch/
         file_regex: ^.*$
-        filegid: '0'
+        gid_or_name: '0'
