--- a/linux_os/guide/services/cron_and_at/restrict_at_cron_users/file_groupowner_at_allow/rule.yml
+++ b/linux_os/guide/services/cron_and_at/restrict_at_cron_users/file_groupowner_at_allow/rule.yml
@@ -43,4 +43,4 @@ template:
     vars:
         filepath: /etc/at.allow
         missing_file_pass: 'true'
-        filegid: '0'
+        gid_or_name: '0'
