--- a/linux_os/guide/services/cron_and_at/restrict_at_cron_users/file_groupowner_cron_allow/rule.yml
+++ b/linux_os/guide/services/cron_and_at/restrict_at_cron_users/file_groupowner_cron_allow/rule.yml
@@ -54,4 +54,4 @@ template:
     vars:
         filepath: /etc/cron.allow
         missing_file_pass: 'true'
-        filegid: '0'
+        gid_or_name: '0'
