--- a/linux_os/guide/services/ssh/file_groupownership_sshd_pub_key/rule.yml
+++ b/linux_os/guide/services/ssh/file_groupownership_sshd_pub_key/rule.yml
@@ -34,5 +34,5 @@ template:
             - /etc/ssh/
         file_regex:
             - ^.*\.pub$
-        filegid: '0'
+        gid_or_name: '0'
         missing_file_pass: 'true'
