--- a/linux_os/guide/system/permissions/files/permissions_important_account_files/file_groupowner_backup_etc_group/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_important_account_files/file_groupowner_backup_etc_group/rule.yml
@@ -47,5 +47,5 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/group-
-        filegid: '0'
+        gid_or_name: '0'
         missing_file_pass: 'true'
