--- a/linux_os/guide/system/permissions/files/permissions_within_important_dirs/dir_group_ownership_library_dirs/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_within_important_dirs/dir_group_ownership_library_dirs/rule.yml
@@ -62,7 +62,7 @@ template:
             - /usr/lib/
             - /usr/lib64/
         recursive: 'true'
-        filegid: '0'
+        gid_or_name: '0'
 
 fixtext: |-
     Configure the system-wide shared library directories (/lib, /lib64, /usr/lib and /usr/lib64) to be protected from unauthorized access.
