--- a/linux_os/guide/system/permissions/files/permissions_within_important_dirs/dir_groupownership_binary_dirs/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_within_important_dirs/dir_groupownership_binary_dirs/rule.yml
@@ -62,4 +62,4 @@ template:
             - /usr/local/bin/
             - /usr/local/sbin/
         recursive: 'true'
-        filegid: '0'
+        gid_or_name: '0'
