--- a/linux_os/guide/system/permissions/files/permissions_within_important_dirs/file_groupownership_audit_binaries/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_within_important_dirs/file_groupownership_audit_binaries/rule.yml
@@ -80,4 +80,4 @@ template:
             - /sbin/auditd
             - /sbin/audispd
             - /sbin/augenrules
-        filegid: '0'
+        gid_or_name: '0'
