--- a/linux_os/guide/system/software/integrity/software-integrity/aide/file_audit_tools_group_ownership/rule.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/file_audit_tools_group_ownership/rule.yml
@@ -66,6 +66,6 @@ template:
             - /sbin/auditd
             - /sbin/rsyslogd
             - /sbin/augenrules
-        filegid: '0'
+        gid_or_name: '0'
         missing_file_pass: 'true'
 
