--- a/applications/openshift/master/file_groupowner_cni_conf/rule.yml
+++ b/applications/openshift/master/file_groupowner_cni_conf/rule.yml
@@ -34,5 +34,5 @@ template:
     name: file_groupowner
     vars:
         filepath: ^/etc/cni/net.d/.*$
-        filegid: '0'
+        gid_or_name: '0'
         filepath_is_regex: "true"
