--- a/applications/openshift/master/file_groupowner_etcd_data_files/rule.yml
+++ b/applications/openshift/master/file_groupowner_etcd_data_files/rule.yml
@@ -41,5 +41,5 @@ template:
     name: file_groupowner
     vars:
         filepath: ^/var/lib/etcd/member/wal/.*$
-        filegid: '0'
+        gid_or_name: '0'
         filepath_is_regex: "true"
