--- a/applications/openshift/master/file_groupowner_etcd_member/rule.yml
+++ b/applications/openshift/master/file_groupowner_etcd_member/rule.yml
@@ -43,5 +43,5 @@ template:
     name: file_groupowner
     vars:
         filepath: ^/etc/kubernetes/static-pod-resources/etcd-pod-.*/etcd-pod.yaml$
-        filegid: '0'
+        gid_or_name: '0'
         filepath_is_regex: "true"
