--- a/applications/openshift/master/file_groupowner_etcd_pki_cert_files/rule.yml
+++ b/applications/openshift/master/file_groupowner_etcd_pki_cert_files/rule.yml
@@ -56,5 +56,5 @@ template:
   name: file_groupowner
   vars:
     filepath: ^/etc/kubernetes/static-pod-resources/.*/.*/.*/.*\.crt$
-    filegid: '0'
+    gid_or_name: '0'
     filepath_is_regex: "true"
