--- a/applications/openshift/master/file_groupowner_kube_scheduler/rule.yml
+++ b/applications/openshift/master/file_groupowner_kube_scheduler/rule.yml
@@ -40,5 +40,5 @@ template:
     name: file_groupowner
     vars:
         filepath: ^/etc/kubernetes/static-pod-resources/kube-scheduler-pod-.*/kube-scheduler-pod.yaml$
-        filegid: '0'
+        gid_or_name: '0'
         filepath_is_regex: "true"
