--- a/applications/openshift/master/file_groupowner_kubeconfig/rule.yml
+++ b/applications/openshift/master/file_groupowner_kubeconfig/rule.yml
@@ -28,4 +28,4 @@ ocil: |-
 #    name: file_groupowner
 #    vars:
 #        filepath: /etc/kubernetes/kubeconfig
-#        filegid: '0'
+#        gid_or_name: '0'
