--- a/applications/openshift/master/file_groupowner_openshift_sdn_cniserver_config/rule.yml
+++ b/applications/openshift/master/file_groupowner_openshift_sdn_cniserver_config/rule.yml
@@ -35,4 +35,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /var/run/openshift-sdn/cniserver/config.json
-        filegid: '0'
+        gid_or_name: '0'
