--- a/applications/openshift/master/file_groupowner_ovn_cni_server_sock/rule.yml
+++ b/applications/openshift/master/file_groupowner_ovn_cni_server_sock/rule.yml
@@ -35,4 +35,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /run/ovn-kubernetes/cni/ovn-cni-server.sock
-        filegid: '0'
+        gid_or_name: '0'
