--- a/applications/openshift/master/file_groupowner_ovn_db_files/rule.yml
+++ b/applications/openshift/master/file_groupowner_ovn_db_files/rule.yml
@@ -35,5 +35,5 @@ template:
   name: file_groupowner
   vars:
     filepath: ^/var/lib/ovn/etc/*.db$
-    filegid: '0'
+    gid_or_name: '0'
     filepath_is_regex: "true"
