--- a/applications/openshift/worker/file_groupowner_kubelet_conf/rule.yml
+++ b/applications/openshift/worker/file_groupowner_kubelet_conf/rule.yml
@@ -39,4 +39,4 @@ template:
     name: file_groupowner
     vars:
         filepath: {{{ kubeletconf_path }}}
-        filegid: '0'
+        gid_or_name: '0'
