--- a/applications/openshift/worker/file_groupowner_worker_ca/rule.yml
+++ b/applications/openshift/worker/file_groupowner_worker_ca/rule.yml
@@ -33,4 +33,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/kubernetes/kubelet-ca.crt
-        filegid: '0'
+        gid_or_name: '0'
