--- a/applications/openshift/worker/file_groupowner_worker_kubeconfig/rule.yml
+++ b/applications/openshift/worker/file_groupowner_worker_kubeconfig/rule.yml
@@ -33,4 +33,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /var/lib/kubelet/kubeconfig
-        filegid: '0'
+        gid_or_name: '0'
