--- a/applications/openshift/worker/file_groupowner_worker_service/rule.yml
+++ b/applications/openshift/worker/file_groupowner_worker_service/rule.yml
@@ -36,4 +36,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/systemd/system/kubelet.service
-        filegid: '0'
+        gid_or_name: '0'
