--- a/linux_os/guide/services/cron_and_at/file_groupowner_cron_hourly/rule.yml
+++ b/linux_os/guide/services/cron_and_at/file_groupowner_cron_hourly/rule.yml
@@ -53,4 +53,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/cron.hourly/
-        filegid: '0'
+        gid_or_name: '0'
