--- a/linux_os/guide/services/obsolete/inetd_and_xinetd/file_groupowner_etc_hosts_deny/rule.yml
+++ b/linux_os/guide/services/obsolete/inetd_and_xinetd/file_groupowner_etc_hosts_deny/rule.yml
@@ -29,5 +29,5 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/hosts.deny
-        filegid: '0'
+        gid_or_name: '0'
         missing_file_pass: 'true'
