--- a/linux_os/guide/services/ssh/file_groupowner_sshd_config/rule.yml
+++ b/linux_os/guide/services/ssh/file_groupowner_sshd_config/rule.yml
@@ -55,4 +55,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/ssh/sshd_config
-        filegid: '0'
+        gid_or_name: '0'
