--- a/linux_os/guide/system/accounts/accounts-banners/file_groupowner_etc_issue_net/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/file_groupowner_etc_issue_net/rule.yml
@@ -41,5 +41,5 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/issue.net
-        filegid: '0'
+        gid_or_name: '0'
         missing_file_pass: 'true'
