--- a/linux_os/guide/system/accounts/accounts-session/file_groupownership_lastlog/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-session/file_groupownership_lastlog/rule.yml
@@ -32,4 +32,4 @@ template:
     name: file_groupowner
     vars:
         filepath: /usr/bin/lastlog
-        filegid: '0'
+        gid_or_name: '0'
