--- a/linux_os/guide/system/auditing/auditd_configure_rules/file_groupownership_audit_configuration/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/file_groupownership_audit_configuration/rule.yml
@@ -40,4 +40,4 @@ template:
         file_regex:
             - ^audit(\.rules|d\.conf)$
             - ^.*\.rules$
-        filegid: '0'
+        gid_or_name: '0'
