--- a/linux_os/guide/system/bootloader-grub2/non-uefi/file_groupowner_grub2_cfg/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/non-uefi/file_groupowner_grub2_cfg/rule.yml
@@ -61,4 +61,4 @@ template:
     name: file_groupowner
     vars:
         filepath: {{{ grub2_boot_path }}}/grub.cfg
-        filegid: '0'
+        gid_or_name: '0'
