--- a/linux_os/guide/system/bootloader-grub2/non-uefi/file_groupowner_user_cfg/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/non-uefi/file_groupowner_user_cfg/rule.yml
@@ -54,4 +54,4 @@ template:
     name: file_groupowner
     vars:
         filepath: {{{ grub2_boot_path }}}/user.cfg
-        filegid: '0'
+        gid_or_name: '0'
