--- a/linux_os/guide/system/bootloader-grub2/uefi/file_groupowner_efi_grub2_cfg/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/uefi/file_groupowner_efi_grub2_cfg/rule.yml
@@ -50,4 +50,4 @@ template:
     name: file_groupowner
     vars:
         filepath: {{{ grub2_uefi_boot_path }}}/grub.cfg
-        filegid: '0'
+        gid_or_name: '0'
