--- a/linux_os/guide/system/bootloader-grub2/uefi/file_groupowner_efi_user_cfg/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/uefi/file_groupowner_efi_user_cfg/rule.yml
@@ -48,4 +48,4 @@ template:
     name: file_groupowner
     vars:
         filepath: {{{ grub2_uefi_boot_path }}}/user.cfg
-        filegid: '0'
+        gid_or_name: '0'
