--- a/linux_os/guide/system/permissions/files/permissions_important_account_files/file_groupowner_backup_etc_gshadow/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_important_account_files/file_groupowner_backup_etc_gshadow/rule.yml
@@ -52,11 +52,11 @@ template:
     name: file_groupowner
     vars:
         filepath: /etc/gshadow-
-        filegid: '0'
-        filegid@debian10: '42'
-        filegid@debian11: '42'
-        filegid@ubuntu1604: '42'
-        filegid@ubuntu1804: '42'
-        filegid@ubuntu2004: '42'
-        filegid@ubuntu2204: '42'
+        gid_or_name: '0'
+        gid_or_name@debian10: '42'
+        gid_or_name@debian11: '42'
+        gid_or_name@ubuntu1604: '42'
+        gid_or_name@ubuntu1804: '42'
+        gid_or_name@ubuntu2004: '42'
+        gid_or_name@ubuntu2204: '42'
         missing_file_pass: 'true'
