--- a/linux_os/guide/system/permissions/files/permissions_var_log_dir/file_groupowner_var_log/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_var_log_dir/file_groupowner_var_log/rule.yml
@@ -38,10 +38,10 @@ template:
     name: file_groupowner
     vars:
         filepath: /var/log/
-        filegid: '0'
-        filegid@ubuntu1604: '110'
-        filegid@ubuntu1804: '110'
-        filegid@ubuntu2004: '110'
+        gid_or_name: '0'
+        gid_or_name@ubuntu1604: '110'
+        gid_or_name@ubuntu1804: '110'
+        gid_or_name@ubuntu2004: '110'
 
 fixtext: |-
     {{{ describe_file_group_owner(file="/var/log", group=gid) }}}
