--- a/linux_os/guide/system/permissions/files/permissions_within_important_dirs/root_permissions_syslibrary_files/rule.yml
+++ b/linux_os/guide/system/permissions/files/permissions_within_important_dirs/root_permissions_syslibrary_files/rule.yml
@@ -65,7 +65,7 @@ template:
             - /usr/lib64/
         file_regex: ^.*$
         recursive: 'true'
-        filegid: '0'
+        gid_or_name: '0'
 
 fixtext: |-
     Configure the system-wide shared library files (/lib, /lib64, /usr/lib and /usr/lib64) to be protected from unauthorized access.
