Allow products to specify the components directory
Products can decide to use components or they can define their own set
of components. Products specify a path to the directory with component
files by the `components_root` key in the `product.yml`.
This allows products like OCP to use components.

--- a/products/example/product.yml
+++ b/products/example/product.yml
@@ -4,6 +4,7 @@ type: platform
 
 benchmark_id: EXAMPLE
 benchmark_root: "../../linux_os/guide"
+components_root: "../../components"
 
 profiles_root: "./profiles"
 
