--- a/products/rhel9/product.yml
+++ b/products/rhel9/product.yml
@@ -4,6 +4,7 @@ type: platform
 
 benchmark_id: RHEL-9
 benchmark_root: "../../linux_os/guide"
+components_root: "../../components"
 
 profiles_root: "./profiles"
 
