Allow products to specify the components directory
Products can decide to use components or they can define their own set
of components. Products specify a path to the directory with component
files by the `components_root` key in the `product.yml`.
This allows products like OCP to use components.

--- a/tests/data/product_stability/rhel7.yml
+++ b/tests/data/product_stability/rhel7.yml
@@ -12,6 +12,7 @@ centos_major_version: '7'
 centos_pkg_release: 53a7ff4b
 centos_pkg_version: f4a80eb5
 chrony_conf_path: /etc/chrony.conf
+components_root: ../../components
 cpes:
 - rhel7:
     check_id: installed_OS_is_rhel7
