--- a/linux_os/guide/system/network/network-ipsec/package_libreswan_installed/rule.yml
+++ b/linux_os/guide/system/network/network-ipsec/package_libreswan_installed/rule.yml
@@ -5,9 +5,10 @@ prodtype: alinux2,alinux3,anolis8,fedora,ol7,ol8,ol9,rhcos4,rhel7,rhel8,rhel9,rh
 title: 'Install libreswan Package'
 
 description: |-
-    The Libreswan package provides an implementation of IPsec
+    The libreswan package provides an implementation of IPsec
     and IKE, which permits the creation of secure tunnels over
     untrusted networks. {{{ describe_package_install(package="libreswan") }}}
+    
 
 rationale: |-
     Providing the ability for remote users or systems
@@ -45,8 +46,8 @@ fixtext: '{{{ fixtext_package_installed("libreswan") }}}'
 
 srg_requirement: '{{{ srg_requirement_package_installed("libreswan") }}}'
 
+
 template:
     name: package_installed
     vars:
         pkgname: libreswan
-
