--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1294,9 +1294,10 @@ controls:
     levels:
     - l2_server
     - l2_workstation
-    status: partial # we do not check for audit-libs package
+    status: automated
     rules:
-    - package_audit_installed
+      - package_audit_installed
+      - package_audit-libs_installed
 
   - id: 4.1.1.2
     title: Ensure auditd service is enabled and running (Automated)
