--- a/linux_os/guide/system/auditing/package_audit-libs_installed/rule.yml
+++ b/linux_os/guide/system/auditing/package_audit-libs_installed/rule.yml
@@ -8,7 +8,7 @@ documentation_complete: true
 
 title: 'Ensure the {{{ package_name }}} package as a part of audit Subsystem is Installed'
 
-prodtype: sle12,sle15
+prodtype: rhel7,sle12,sle15
 
 description: 'The {{{ package_name }}} package should be installed.'
 
@@ -17,11 +17,13 @@ rationale: 'The auditd service is an access monitoring and accounting daemon, wa
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86531-1
     cce@sle12: CCE-92320-1
     cce@sle15: CCE-92478-7
 
 references:
     anssi: BP28(R50)
+    cis@rhel7: 4.1.1.1
     cis@sle12: 4.1.1.1
     cis@sle15: 4.1.1.1
     disa: CCI-000130,CCI-000131,CCI-000132,CCI-000133,CCI-000134,CCI-000135,CCI-000154,CCI-000158,CCI-000172,CCI-001464,CCI-001487,CCI-001814,CCI-001875,CCI-001876,CCI-001877,CCI-001878,CCI-001879,CCI-001880,CCI-001881,CCI-001882,CCI-001889,CCI-001914,CCI-002884,CCI-000169
@@ -31,8 +33,6 @@ references:
     ospp: FAU_GEN.1
     pcidss: Req-10.2.1
     srg: SRG-OS-000062-GPOS-00031,SRG-OS-000037-GPOS-00015,SRG-OS-000038-GPOS-00016,SRG-OS-000039-GPOS-00017,SRG-OS-000040-GPOS-00018,SRG-OS-000041-GPOS-00019,SRG-OS-000042-GPOS-00021,SRG-OS-000051-GPOS-00024,SRG-OS-000054-GPOS-00025,SRG-OS-000122-GPOS-00063,SRG-OS-000254-GPOS-00095,SRG-OS-000255-GPOS-00096,SRG-OS-000337-GPOS-00129,SRG-OS-000348-GPOS-00136,SRG-OS-000349-GPOS-00137,SRG-OS-000350-GPOS-00138,SRG-OS-000351-GPOS-00139,SRG-OS-000352-GPOS-00140,SRG-OS-000353-GPOS-00141,SRG-OS-000354-GPOS-00142,SRG-OS-000358-GPOS-00145,SRG-OS-000365-GPOS-00152,SRG-OS-000392-GPOS-00172,SRG-OS-000475-GPOS-00220
-
-    
 
 ocil_clause: 'the {{{ package_name }}} package is not installed'
 
