--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2049,10 +2049,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # missing rule for checking of /etc/shadow
+    status: automated
     rules:
-    - accounts_maximum_age_login_defs
-    - var_accounts_maximum_age_login_defs=365
+      - accounts_maximum_age_login_defs
+      - var_accounts_maximum_age_login_defs=365
+      - accounts_password_set_max_life_existing
 
   - id: 5.5.1.2
     title: Ensure minimum days between password changes is configured (Automated)
