--- a/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_set_max_life_existing/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/password_expiration/accounts_password_set_max_life_existing/rule.yml
@@ -27,6 +27,7 @@ identifiers:
 
 references:
     cis@alinux3: 5.6.1.1
+    cis@rhel7: 5.5.1.1
     cis@rhel8: 5.6.1.1
     cis@rhel9: 5.6.1.1
     cis@sle12: 5.4.1.2
