--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -2060,10 +2060,11 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # missing rule for checking of /etc/shadow
+    status: automated
     rules:
-    - accounts_minimum_age_login_defs
-    - var_accounts_minimum_age_login_defs=1
+      - accounts_minimum_age_login_defs
+      - var_accounts_minimum_age_login_defs=1
+      - accounts_password_set_min_life_existing
 
   - id: 5.5.1.3
     title: Ensure password expiration warning days is 7 or more (Automated)
