--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1040,9 +1040,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: partial # only checking systemd service, not running "firewall-cmd --state"
+    status: automated
     rules:
-    - service_firewalld_enabled
+      - service_firewalld_enabled
 
   - id: 3.5.1.5
     title: Ensure firewalld default zone is set (Automated)
