--- a/linux_os/guide/system/network/network-nftables/package_nftables_installed/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/package_nftables_installed/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel8,rhel9,sle15,ubuntu2004,ubuntu2204
+prodtype: rhel7,rhel8,rhel9,sle15,ubuntu2004,ubuntu2204
 
 title: 'Install nftables Package'
 
@@ -19,11 +19,13 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86682-2
     cce@rhel8: CCE-86376-1
     cce@rhel9: CCE-86378-7
     cce@sle15: CCE-92469-6
 
 references:
+    cis@rhel7: 3.5.2.1
     cis@rhel8: 3.4.2.1
     cis@rhel9: 3.4.1.1
     cis@sle15: 3.5.2.1
