Complete the CIS 3.5.1.3 requirement for RHEL7
Included the service_nftables_disabled rule.

--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1033,7 +1033,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    status: pending # rule missing
+    status: automated
+    rules:
+      - service_nftables_disabled
 
   - id: 3.5.1.4
     title: Ensure firewalld service enabled and running (Automated)
