--- a/linux_os/guide/system/network/network-nftables/package_nftables_removed/rule.yml
+++ b/linux_os/guide/system/network/network-nftables/package_nftables_removed/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: alinux3,sle15,ubuntu2004,ubuntu2204
+prodtype: alinux3,rhel7,sle15,ubuntu2004,ubuntu2204
 
 title: 'Uninstall nftables package'
 
@@ -15,14 +15,15 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86680-6
     cce@sle15: CCE-92518-0
 
 references:
     cis@alinux3: 3.4.4.1.2
+    cis@rhel7: 3.5.3.1.2
     cis@sle15: 3.5.1.2,3.5.3.1.2
     cis@ubuntu2004: 3.5.3.1.2
     cis@ubuntu2204: 3.5.3.1.2
-
 
 {{{ complete_ocil_entry_package(package="nftables") }}}
 
