--- a/linux_os/guide/services/sssd/sssd_has_trust_anchor/rule.yml
+++ b/linux_os/guide/services/sssd/sssd_has_trust_anchor/rule.yml
@@ -29,6 +29,7 @@ rationale: |-
   Validation of the certificate status information is out of scope for this requirement.
 
 identifiers:
+  cce@rhel8: CCE-86312-6
   cce@rhel9: CCE-86321-7
 
 references:
