Pretty minor fix in product title
The title for workstation was not aligned with other entries.

--- a/products/rhel7/product.yml
+++ b/products/rhel7/product.yml
@@ -52,7 +52,7 @@ cpes:
 
   - rhel7-workstation:
       name: "cpe:/o:redhat:enterprise_linux:7::workstation"
-      title: "red hat enterprise linux 7 workstation"
+      title: "Red Hat Enterprise Linux 7 Workstation"
       check_id: installed_OS_is_rhel7
 
 # Mapping of CPE platform to package
