Update reference for product stability test

--- a/tests/data/product_stability/rhel7.yml
+++ b/tests/data/product_stability/rhel7.yml
@@ -32,7 +32,7 @@ cpes:
 - rhel7-workstation:
     check_id: installed_OS_is_rhel7
     name: cpe:/o:redhat:enterprise_linux:7::workstation
-    title: red hat enterprise linux 7 workstation
+    title: Red Hat Enterprise Linux 7 Workstation
 cpes_root: ../../shared/applicability
 dconf_gdm_dir: gdm.d
 faillock_path: /var/run/faillock
