--- a/controls/cis_ocp_1_3_0/section-1.yml
+++ b/controls/cis_ocp_1_3_0/section-1.yml
@@ -329,7 +329,7 @@ controls:
     controls:
     - id: 1.3.1
       title: Ensure that garbage collection is configured as appropriate
-      status: Pending
+      status: pending
       rules:
         - kubelet_eviction_thresholds_set_hard_memory_available
         - kubelet_eviction_thresholds_set_hard_nodefs_available
