--- a/linux_os/guide/system/accounts/accounts-pam/disallow_bypass_password_sudo/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/disallow_bypass_password_sudo/rule.yml
@@ -27,6 +27,7 @@ references:
     srg: SRG-OS-000373-GPOS-00156,SRG-OS-000373-GPOS-00157,SRG-OS-000373-GPOS-00158
     stigid@ol7: OL07-00-010344
     stigid@ol8: OL08-00-010385
+    stigid@rhel7: RHEL-07-010344
     stigid@sle12: SLES-12-010114
     stigid@sle15: SLES-15-020104
 
