--- a/linux_os/guide/system/accounts/accounts-pam/disallow_bypass_password_sudo/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/disallow_bypass_password_sudo/rule.yml
@@ -17,6 +17,7 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-86408-2
     cce@rhel9: CCE-85967-8
     cce@sle12: CCE-83250-1
     cce@sle15: CCE-91156-0
