--- a/linux_os/guide/system/selinux/selinux_confine_to_least_privilege/rule.yml
+++ b/linux_os/guide/system/selinux/selinux_confine_to_least_privilege/rule.yml
@@ -27,6 +27,9 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel7: CCE-86544-4
+
 references:
     disa: CCI-002165,CCI-002235
     nist: AC-3(4),AC-6(10)
