A fix in the rule sshd_set_keepalive

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -796,6 +796,7 @@ controls:
     - sshd_set_idle_timeout
     - sshd_idle_timeout_value=10_minutes
     - sshd_set_keepalive
+    - var_sshd_set_keepalive=0
 
   - id: R33
     title: Use of dedicated administration accounts
