--- a/linux_os/guide/services/ssh/ssh_server/sshd_set_keepalive/rule.yml
+++ b/linux_os/guide/services/ssh/ssh_server/sshd_set_keepalive/rule.yml
@@ -32,7 +32,7 @@ identifiers:
     cce@sle15: CCE-91228-7
 
 references:
-    anssi: BP28(R29)
+    anssi: BP28(R32)
     cis-csc: 1,12,13,14,15,16,18,3,5,7,8
     cis@alinux2: 5.2.14
     cis@alinux3: 5.2.13
@@ -59,6 +59,7 @@ references:
     srg: SRG-OS-000163-GPOS-00072,SRG-OS-000279-GPOS-00109
     stigid@rhel8: RHEL-08-010200
     stigid@sle12: SLES-12-030191
+    stigid@sle15: SLES-15-010320
     stigid@ubuntu2004: UBTU-20-010036
 
 requires:
