add-rules sles-15-010418 sles-12-010498

--- a/linux_os/guide/services/mail/package_mailx_installed/rule.yml
+++ b/linux_os/guide/services/mail/package_mailx_installed/rule.yml
@@ -1,5 +1,7 @@
 documentation_complete: true
 
+prodtype: ol7,ol8,sle12,sle15
+
 title: 'The mailx Package Is Installed'
 
 description: |-
@@ -12,12 +14,18 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@sle12: CCE-92331-8
+    cce@sle15: CCE-92519-8
+
 references:
     disa: CCI-001744
     nist: CM-3(5)
-    srg: SRG-OS-000363-GPOS-00150
+    srg: SRG-OS-000363-GPOS-00150,SRG-OS-000445-GPOS-00199,SRG-OS-000446-GPOS-00200
     stigid@ol7: OL07-00-020028
     stigid@ol8: OL08-00-010358
+    stigid@sle12: SLES-12-010498
+    stigid@sle15: SLES-15-010418
 
 ocil_clause: 'the package is not installed'
 
