SRG-APP-000141-CTR-000315: Covered by disabling SSH and locking down USB

--- a/linux_os/guide/services/ssh/service_sshd_disabled/rule.yml
+++ b/linux_os/guide/services/ssh/service_sshd_disabled/rule.yml
@@ -26,7 +26,7 @@ rationale: |-
 
 references:
   nist: CM-3(6),IA-2(4)
-  srg: SRG-APP-000185-CTR-000490
+  srg: SRG-APP-000185-CTR-000490,SRG-APP-000141-CTR-000315
 
 severity: high
 
