--- a/linux_os/guide/services/mail/package_mailx_installed/rule.yml
+++ b/linux_os/guide/services/mail/package_mailx_installed/rule.yml
@@ -21,7 +21,7 @@ identifiers:
 references:
     disa: CCI-001744
     nist: CM-3(5)
-    srg: SRG-OS-000363-GPOS-00150,SRG-OS-000445-GPOS-00199,SRG-OS-000446-GPOS-00200
+    srg: SRG-OS-000363-GPOS-00150
     stigid@ol7: OL07-00-020028
     stigid@ol8: OL08-00-010358
     stigid@sle12: SLES-12-010498
