Add platform package clause for firewalld related rules

--- a/linux_os/guide/system/network/network-iptables/iptables_activation/service_ip6tables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/service_ip6tables_enabled/rule.yml
@@ -11,6 +11,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[iptables]
+
 identifiers:
     cce@rhel8: CCE-85955-3
     cce@rhel9: CCE-85960-3
