--- a/linux_os/guide/system/network/network-iptables/iptables_activation/service_iptables_enabled/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/service_iptables_enabled/rule.yml
@@ -11,6 +11,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[iptables]
+
 identifiers:
     cce@rhel8: CCE-85961-1
     cce@rhel9: CCE-85962-9
