--- a/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/set_ip6tables_default_rule/rule.yml
@@ -20,7 +20,7 @@ rationale: |-
 
 severity: medium
 
-platform: not package[nftables] and not package[ufw]
+platform: not package[nftables] and not package[ufw] and package[iptables]
 
 identifiers:
     cce@rhel7: CCE-86718-4
