--- a/linux_os/guide/system/network/network-iptables/iptables_activation/set_loopback_traffic/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/iptables_activation/set_loopback_traffic/rule.yml
@@ -16,7 +16,7 @@ rationale: |-
 
 severity: medium
 
-platform: not package[nftables] and not package[ufw]
+platform: not package[nftables] and not package[ufw] and package[iptables]
 
 identifiers:
     cce@sle12: CCE-92214-6
