--- a/linux_os/guide/system/network/network-iptables/package_iptables-persistent_removed/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/package_iptables-persistent_removed/rule.yml
@@ -13,6 +13,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[iptables]
+
 references:
     cis@ubuntu2004: 3.5.1.2
     cis@ubuntu2204: 3.5.1.2
