--- a/linux_os/guide/system/network/network-iptables/package_iptables-services_removed/rule.yml
+++ b/linux_os/guide/system/network/network-iptables/package_iptables-services_removed/rule.yml
@@ -16,6 +16,8 @@ rationale: |-
 
 severity: medium
 
+platform: package[iptables]
+
 identifiers:
     cce@rhel7: CCE-86678-0
     cce@rhel8: CCE-86679-8
