Too much stripping breaks the code

--- a/linux_os/guide/system/accounts/accounts-banners/file_owner_etc_issue/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-banners/file_owner_etc_issue/rule.yml
@@ -39,7 +39,7 @@ ocil_clause: '{{{ ocil_clause_file_owner(file="/etc/issue", owner="root") }}}'
 ocil: |-
     {{{ ocil_file_owner(file="/etc/issue", owner="root") }}}
 
-{{%- if product in ['sle15'] -%}}
+{{%- if product in ['sle15'] %}}
 template:
     name: file_owner
     vars:
@@ -47,7 +47,7 @@ template:
         fileuid: '0'
         file_regex: ^.*$
         recursive: 'true'
-{{%- else -%}}
+{{%- else %}}
 template:
     name: file_owner
     vars:
