Revert "fix: aide/remediations: add crontabs"
This reverts commit ac8389e3ddab599f6f5bf7465636817fb8dbbf3e.
Fixes #10725

--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_periodic_cron_checking/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_periodic_cron_checking/ansible/shared.yml
@@ -5,10 +5,10 @@
 # disruption = low
 - name: "Ensure AIDE is installed"
   package:
-    name:
-      - aide
-      - crontabs
+    name: "{{ item }}"
     state: present
+  with_items:
+    - aide
 
 - name: Set cron package name - RedHat
   set_fact:
