Modify adie db exist path for UBTU-20-010450
This commit will add in a stat check path for ubuntu. Upon running aideinit, the new db file is named as "aide.db.new" similarly to SLE remediation methods.

--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_build_database/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_build_database/ansible/shared.yml
@@ -23,7 +23,11 @@
 # mainly to allow ansible's check mode to work
 - name: "Check whether the stock AIDE Database exists"
   stat:
+    {{% if 'ubuntu' in product %}}
+    path: /var/lib/aide/aide.db.new
+    {{% else %}}
     path: /var/lib/aide/aide.db.new.gz
+    {{% endif %}}
   register: aide_database_stat
 
 - name: "Stage AIDE Database"
