Fix path for aide to /etc/aide/aide.conf for UBTU-20-010205
This commit will fix the path from /etc/aide.conf to /etc/aide/aide.conf by adding in jinja conditional

--- a/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/ansible/shared.yml
+++ b/linux_os/guide/system/software/integrity/software-integrity/aide/aide_check_audit_tools/ansible/shared.yml
@@ -30,13 +30,21 @@
 
 - name: Ensure existing AIDE configuration for audit tools are correct
   lineinfile:
+    {{% if 'ubuntu' in product %}}
+    path: /etc/aide/aide.conf
+    {{% else %}}
     path: /etc/aide.conf
+    {{% endif %}}
     regexp: ^{{ item }}\s
     line: "{{ item }} {{{ aide_string() }}}"
   with_items: "{{ audit_tools }}"
 
 - name: Configure AIDE to properly protect audit tools
   lineinfile:
+    {{% if 'ubuntu' in product %}}
+    path: /etc/aide/aide.conf
+    {{% else %}}
     path: /etc/aide.conf
+    {{% endif %}}
     line: "{{ item }} {{{ aide_string() }}}"
   with_items: "{{ audit_tools }}"
